--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- intl-tel-input -->
     <link rel="stylesheet" href="assets/css/intlTelInput.css">
 
@@ -17,19 +19,28 @@
     <title>Sem salvar!</title>
   </head>
   <body class="bg-default">
-    <div class="container">
-      <div class="bg-light">
+    <div class="container bg-custom">
+      <div class="bg-form">
         <form>
-          <div class="mb-3">
-            <label for="InputNumber" class="form-label">Número do celular</label>
+          <div class="mb-3 center mb-3">
+            <label for="InputNumber" class="form-label margin-top">Número do celular</label>
             <input class="" id="phone" name="phone" type="tel">
           </div>
-          <a href="" class="btn btn-success" id="button" role="button" target="_blank">Gerar link</a>
+          <a href="" class="btn btn-success btn-center mb-3" id="button" role="button" target="_blank">Gerar link</a>
         </form>
       </div>
-
-
+      <div class="text-left margin-top">
+        <div class="card-body">
+          <h5 class="card-title text-center">Como funciona</h5>
+          <br></br>
+          <p class="card-text">1 - Insira o nº do WhatsApp Ex: (27) 99660-5866</p>
+          <p class="card-text">2 - Clique em "GERAR LINK"</p>
+          <p class="card-text">3 - Iniciar conversa</p>
+          <p class="card-text"><small class="text-muted"></small></p>
+        </div>
+      </div>
     </div>
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
