chore: remove set text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <label for="InputNumber" class="form-label margin-top">Número do celular</label>
             <input class="" id="phone" name="phone" type="tel">
           </div>
-          <a href="" class="btn btn-success btn-center mb-3" id="button" role="button" target="_blank">Gerar link</a>
+          <a href="" class="btn btn-success btn-center mb-3" id="button" role="button">Iniciar conversa</a>
         </form>
       </div>
       <div class="text-left margin-top">
@@ -34,8 +34,7 @@
           <h5 class="card-title text-center">Como funciona</h5>
           <br></br>
           <p class="card-text">1 - Insira o nº do WhatsApp Ex: (27) 99660-5866</p>
-          <p class="card-text">2 - Clique em "GERAR LINK"</p>
-          <p class="card-text">3 - Iniciar conversa</p>
+          <p class="card-text">2 - Clique em "Iniciar conversa"</p>
           <p class="card-text"><small class="text-muted"></small></p>
         </div>
       </div>
