--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="assets/img/icon.jpg"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -33,7 +34,7 @@
         <div class="card-body">
           <h5 class="card-title text-center">Como funciona</h5>
           <br></br>
-          <p class="card-text">1 - Insira o nº do WhatsApp Ex: (27) 99660-5866</p>
+          <p class="card-text">1 - Insira o nº do WhatsApp Ex: (22) 12345-1234</p>
           <p class="card-text">2 - Clique em "Iniciar conversa"</p>
           <p class="card-text"><small class="text-muted"></small></p>
         </div>
