chore: Add target="_blank"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <label for="InputNumber" class="form-label margin-top">Número do celular</label>
             <input class="" id="phone" name="phone" type="tel">
           </div>
-          <a href="" class="btn btn-success btn-center mb-3" id="button" role="button">Iniciar conversa</a>
+          <a href="" class="btn btn-success btn-center mb-3" id="button" target="_blank" role="button">Iniciar conversa</a>
         </form>
       </div>
       <div class="text-left margin-top">
